--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -47,7 +47,7 @@ Take the following Map Tiles ($P$ stands for the number of players) and arrange 
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
-The game ends at the end of the Round when any of these conditions are met:
+The game ends at the end of the Round when any of the following conditions are met:
 
 \begin{itemize}
  \item One player has defeated each other player's Main Heroes once. - \textit{That player wins the game immediately.}
@@ -55,7 +55,7 @@ The game ends at the end of the Round when any of these conditions are met:
  \item At the end of Round 13.
 \end{itemize}
 
-If no player has achieved an immediate victory, the player controlling a Dragon Utopia wins. If both Dragon Utopias are controlled by different players, they draw Cards up to their Hand Limit and start a final Combat. The winner of that Combat wins the game. If no one controls a Dragon Utopia, all players lose.
+If no player achieves immediate victory, the player controlling a Dragon Utopia wins. If different players control the two Utopias, they each draw Cards up to their Hand Limit and engage in a final Combat - the winner is the victor. If no one controls a Dragon Utopia, all players lose.
 \subsection*{\MakeUppercase{Timed Events}}
 
 \textbf{\nth{4} Round:}
@@ -68,23 +68,22 @@ If no player has achieved an immediate victory, the player controlling a Dragon 
 \end{itemize}
 \textbf{End of \nth{10} Round:}
 \begin{itemize}
-  \item Player(s) whose Main Hero has the least experience roll 2 \svg{resource}.
+  \item The Player(s) whose Main Hero has the least experience roll 2 \svg{resource}.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
   \item \textbf{Obelisk:} Draw 1 Card from your Deck. \textit{Visitable once per Faction.}
   \item When a Secondary Hero starts their turn on a (I) or (II-III) Map Tile, that Hero gains +1 \svgeven{movement}.
-  \item When fighting a Neutral Combat, players may increase the difficulty level by +1 for an extra 5 \svg{gold} and Search (2) \svg{spellpower} or \svg{artifact}. % no-check-caps
   \item Level VII Neutral Combats cannot be skipped.
   \item A defeated Main Hero may Empower one Defense Statistic Card from his M\&M Deck and gain +1 \svgeven{movement} for the next Round.
   \item After winning a Combat against another player, draw up to your Hand Limit and discard 1 Card.
-  \item Level VII \textbf{Settlements/Random Town}: Increase all incomes by 1 space and Draw Cards up to your Hand Limit.
-  \item \textbf{Dragon Utopias} are guarded by only dragons.
+  \item Level VII \textbf{Settlements/Random Town}: Increase all incomes by 1 space and Draw 2 Cards.
+  \item \textbf{Dragon Utopias} are guarded only by dragons.
   \item Upon flagging a \textbf{Dragon Utopia}, choose one and then put a Black Cube:
   \begin{itemize}
     \item Sacrifice any number of Units, then recruit one of the defeated Dragons at a discount equal to the total recruitment cost of the sacrificed Units.
-    \item Receive 15 \svg{gold} AND Search (3) \svg{spellpower} or \svg{artifact}.
+    \item Gain 15 \svg{gold} and Search (3) \svg{spellpower} or \svg{artifact}.
   \end{itemize}
 \end{itemize}
 
@@ -95,7 +94,7 @@ If no player has achieved an immediate victory, the player controlling a Dragon 
 \end{center}
 
 \begin{itemize}
-  \item \textbf{Grail Token}: When a player gains or starts their turn with Grail Token, gain +1 \svg{morale_positive} and Search (2) \svg{spellpower} or \svg{artifact}. Both Secondary and Main Heroes may gain the Grail Token.
+  \item \textbf{Grail Token}: When a player gains or starts their turn with it, gain +1 \svg{morale_positive} and Search (2) \svg{spellpower} or \svg{artifact}. Both Main and Secondary Heroes may gain the Grail Token.
   \item \textbf{Obelisk}: Flaggable. You may teleport to another Obelisk that any player has flagged by spending 1 \svgeven{movement}.
 \end{itemize}
 
