--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -35,29 +35,33 @@ Take the following Map Tiles ($P$ stands for the number of players) and arrange 
 
 \begin{itemize}
   \item P × Starting (I) Map Tile
-  \item 3P × Far (II-III) Map Tiles
-  \item 2P × Near (IV-V) Map Tiles
-  \item P × Center (VI-VII) Map Tile
-  \item 1 × Center (VI-VII) Map Tile with a Dragon Utopia
+  \item 3P × Far (II–III) Map Tiles
+  \item 2P × Near (IV–V) Map Tiles
+  \item P × Center (VI–VII) Map Tile
+  \item 1 × Center (VI–VII) Map Tile with a Dragon Utopia
 \end{itemize}
 
 \textbf{Additionally, for 4 players:}
 \begin{itemize}
-  \item 1 × Center (VI-VII) Map Tile with a Dragon Utopia
+  \item 1 × Center (VI–VII) Map Tile with a Dragon Utopia
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 The game ends at the end of the Round when any of the following conditions are met:
 
 \begin{itemize}
- \item One player has defeated each other player's Main Heroes once. - \textit{That player wins the game immediately.}
- \item One player has conquered both Dragon Utopias. - \textit{That player wins the game immediately.}
+ \item One player has defeated each other player's Main Heroes once. -- \textit{That player wins the game immediately.}
+ \item One player has conquered both Dragon Utopias. -- \textit{That player wins the game immediately.}
  \item At the end of Round 13.
 \end{itemize}
 
 If no player achieves immediate victory, the player controlling a Dragon Utopia wins. If different players control the two Utopias, they each draw Cards up to their Hand Limit and engage in a final Combat - the winner is the victor. If no one controls a Dragon Utopia, all players lose.
 \subsection*{\MakeUppercase{Timed Events}}
 
+\textbf{\nth{2} Round:}
+\begin{itemize}
+  \item Recruit one Unit that has died for free.
+\end{itemize}
 \textbf{\nth{4} Round:}
 \begin{itemize}
   \item Remove all Black Cubes.
@@ -68,13 +72,12 @@ If no player achieves immediate victory, the player controlling a Dragon Utopia 
 \end{itemize}
 \textbf{End of \nth{10} Round:}
 \begin{itemize}
-  \item The Player(s) whose Main Hero has the least experience roll 2 \svg{resource}.
+  \item The Player(s) whose Main Hero has the least experience rolls 2 \svg{resource}.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
-  \item \textbf{Obelisk:} Draw 1 Card from your Deck. \textit{Visitable once per Faction.}
-  \item When a Secondary Hero starts their turn on a (I) or (II-III) Map Tile, that Hero gains +1 \svgeven{movement}.
+  \item \textbf{Grail Token}: When a player gains or starts their turn with it, gain +1 \svg{morale_positive} and Search (2) \svg{spellpower} or \svg{artifact}. Both Main and Secondary Heroes may gain the Grail Token.
   \item Level VII Neutral Combats cannot be skipped.
   \item A defeated Main Hero may Empower one Defense Statistic Card from his M\&M Deck and gain +1 \svgeven{movement} for the next Round.
   \item After winning a Combat against another player, draw up to your Hand Limit and discard 1 Card.
@@ -82,7 +85,7 @@ If no player achieves immediate victory, the player controlling a Dragon Utopia 
   \item \textbf{Dragon Utopias} are guarded only by dragons.
   \item Upon flagging a \textbf{Dragon Utopia}, choose one and then put a Black Cube:
   \begin{itemize}
-    \item Sacrifice any number of Units, then recruit one of the defeated Dragons at a discount equal to the total recruitment cost of the sacrificed Units.
+    \item Sacrifice any number of Units, then recruit one of the defeated dragons at a discount equal to the total recruitment cost of the sacrificed Units.
     \item Gain 15 \svg{gold} and Search (3) \svg{spellpower} or \svg{artifact}.
   \end{itemize}
 \end{itemize}
@@ -94,8 +97,8 @@ If no player achieves immediate victory, the player controlling a Dragon Utopia 
 \end{center}
 
 \begin{itemize}
-  \item \textbf{Grail Token}: When a player gains or starts their turn with it, gain +1 \svg{morale_positive} and Search (2) \svg{spellpower} or \svg{artifact}. Both Main and Secondary Heroes may gain the Grail Token.
-  \item \textbf{Obelisk}: Flaggable. You may teleport to another Obelisk that any player has flagged by spending 1 \svgeven{movement}.
+  \item When a \textbf{Secondary Hero} is recruited, you may gain a Crown Token and one of each: Attack, Defense, Power and Magic Arrow. These may only be used by your Secondary Hero.
+  \item When a Secondary Hero starts their turn on a I or II–III Map Tile, that Hero gains +1 \svgeven{movement}.
 \end{itemize}
 
 \begin{center}
