--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -50,7 +50,7 @@ Take the following Map Tiles ($P$ stands for the number of players) and arrange 
 The game ends at the end of the Round when any of the following conditions are met:
 
 \begin{itemize}
- \item One player has defeated each other player's Main Heroes once. -- \textit{That player wins the game immediately.}
+ \item One player has defeated each other player's Main Heroes once. \textit{That player wins the game immediately.}
  \item One player has conquered both Dragon Utopias. -- \textit{That player wins the game immediately.}
  \item At the end of Round 13.
 \end{itemize}
