--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -51,7 +51,7 @@ The game ends at the end of the Round when any of the following conditions are m
 
 \begin{itemize}
  \item One player has defeated each other player's Main Heroes once. \textit{That player wins the game immediately.}
- \item One player has conquered both Dragon Utopias. -- \textit{That player wins the game immediately.}
+ \item One player has conquered both Dragon Utopias. \textit{That player wins the game immediately.}
  \item At the end of Round 13.
 \end{itemize}
 
