--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -55,7 +55,9 @@ The game ends at the end of the Round when any of the following conditions are m
  \item At the end of Round 13.
 \end{itemize}
 
-If no player achieves immediate victory, the player controlling a Dragon Utopia wins. If different players control the two Utopias, they each draw Cards up to their Hand Limit and engage in a final Combat - the winner is the victor. If no one controls a Dragon Utopia, all players lose.
+If no player achieves immediate victory, the player controlling a Dragon Utopia wins.
+If different players control the two Utopias, they each draw Cards up to their Hand Limit and engage in a final Combat -- the winner is the victor.
+If no one controls a Dragon Utopia, all players lose.
 \subsection*{\MakeUppercase{Timed Events}}
 
 \textbf{\nth{2} Round:}
