--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -66,7 +66,7 @@ If no one controls a Dragon Utopia, all players lose.
 \end{itemize}
 \textbf{\nth{4} Round:}
 \begin{itemize}
-  \item Remove all Black Cubes.
+  \item Remove all Black Cubes from the Map.
 \end{itemize}
 \textbf{\nth{8} Round:}
 \begin{itemize}
