--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -79,7 +79,7 @@ If no one controls a Dragon Utopia, all players lose.
 
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
-  \item \textbf{Grail Token}: When a player gains or starts their turn with it, gain +1 \svg{morale_positive} and Search (2) \svg{spellpower} or \svg{artifact}. Both Main and Secondary Heroes may gain the Grail Token.
+  \item \textbf{Grail Token}: When a player gains or starts their turn with it, they gain +1 \svg{morale_positive} and Search (2) \svg{spellpower} or \svg{artifact}. Both Main and Secondary Heroes may pick up the Grail Token.
   \item Level VII Neutral Combats cannot be skipped.
   \item A defeated Main Hero may Empower one Defense Statistic Card from his M\&M Deck and gain +1 \svgeven{movement} for the next Round.
   \item After winning a Combat against another player, draw up to your Hand Limit and discard 1 Card.
