--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -85,7 +85,7 @@ If no one controls a Dragon Utopia, all players lose.
   \item After winning a Combat against another player, draw up to your Hand Limit and discard 1 Card.
   \item Level VII \textbf{Settlements/Random Town}: Increase all incomes by 1 space and Draw 2 Cards.
   \item \textbf{Dragon Utopias} are guarded only by dragons.
-  \item Upon flagging a \textbf{Dragon Utopia}, choose one and then put a Black Cube:
+  \item Upon flagging a \textbf{Dragon Utopia}, choose one option and then put a Black Cube:
   \begin{itemize}
     \item Sacrifice any number of Units, then recruit one of the defeated dragons at a discount equal to the total recruitment cost of the sacrificed Units (to a minimum of 0).
     \item Gain 15 \svg{gold} and Search (3) \svg{spellpower} or \svg{artifact}.
