--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -100,7 +100,7 @@ If no one controls a Dragon Utopia, all players lose.
 
 \begin{itemize}
   \item When a \textbf{Secondary Hero} is recruited, you may gain a Crown Token and one of each: Attack, Defense, Power and Magic Arrow. These may only be used by your Secondary Hero.
-  \item When a Secondary Hero starts their turn on a I or II–III Map Tile, that Hero gains +1 \svgeven{movement}.
+  \item When a Secondary Hero starts their turn on a I or II--III Map Tile, they gain +1~\svgeven{movement}.
 \end{itemize}
 
 \begin{center}
