--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -21,7 +21,7 @@ This Scenario plays out over 13 Rounds.
 
 \begin{itemize}
   \item A Pack of cheapest \bronze\ Units
-  \item A Few  of chosen \bronze\ Units
+  \item A Few chosen \bronze\ Units
 \end{itemize}
 
 \textbf{Town Buildings:}
