--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -74,7 +74,7 @@ If no one controls a Dragon Utopia, all players lose.
 \end{itemize}
 \textbf{End of \nth{10} Round:}
 \begin{itemize}
-  \item The Player(s) whose Main Hero has the least experience rolls 2 \svg{resource}.
+  \item The Player(s) whose Main Hero has the least experience roll(s) 2~\svg{resource}.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
