--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -62,7 +62,7 @@ If no one controls a Dragon Utopia, all players lose.
 
 \textbf{\nth{2} Round:}
 \begin{itemize}
-  \item Recruit one Unit that has died for free.
+  \item Recruit one of your Units that has died for free.
 \end{itemize}
 \textbf{\nth{4} Round:}
 \begin{itemize}
