--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -1,4 +1,4 @@
-% !TeX spellcheck = en_US
+0% !TeX spellcheck = en_US
 \addscenariosection{1}{Clash Scenario}{Dragon Valley}{\images/dragon.png}
 
 \begin{multicols*}{2}
@@ -82,8 +82,8 @@ If no one controls a Dragon Utopia, all players lose.
   \item \textbf{Grail Token}: When a player gains or starts their turn with it, they gain +1 \svg{morale_positive} and Search (2) \svg{spellpower} or \svg{artifact}. Both Main and Secondary Heroes may pick up the Grail Token.
   \item Level VII Neutral Combats cannot be skipped.
   \item A defeated Main Hero may Empower one Defense Statistic Card from his M\&M Deck and gain +1 \svgeven{movement} for the next Round.
-  \item After winning a Combat against another player, draw up to your Hand Limit and discard 1 Card.
-  \item Level VII \textbf{Settlements/Random Town}: Increase all incomes by 1 space and Draw 2 Cards.
+  \item After winning a Combat against another player's Main Hero, draw up to your Hand Limit and discard 1 Card.
+  \item Level VII \textbf{Settlements/Random Town}: Increase all incomes by 1 space, Draw 2 Cards and gain +1 \svgeven{movement}.
   \item \textbf{Dragon Utopias} are guarded only by dragons.
   \item Upon flagging a \textbf{Dragon Utopia}, choose one option and then put a Black Cube:
   \begin{itemize}
