--- a/draft-scenarios/clash/trial_by_combat.tex
+++ b/draft-scenarios/clash/trial_by_combat.tex
@@ -20,7 +20,7 @@ This Scenario plays out over 8-10 Rounds.
 \textbf{Starting Units:}
 \begin{itemize}
   \item A Few cheapest \silver\ Units
-  \item 1 random Neutral \bronze\ Unit
+  \item Search (2) Neutral \bronze\ Unit Deck
 \end{itemize}
 
 \textbf{Town Buildings:}
@@ -54,7 +54,7 @@ When any player first flags ``The Hill'', each player, including the one who fla
 \end{itemize}
 \textbf{\nth{3} Round:}
 \begin{itemize}
-  \item Remove all Black Cubes.
+  \item Remove all Black Cubes from the Map.
 \end{itemize}
 \textbf{\nth{5} Round:}
 \begin{itemize}
@@ -106,7 +106,7 @@ When any player first flags ``The Hill'', each player, including the one who fla
 }
 \begin{itemize}
   \item After winning a Neutral Combat, you may sacrifice 2 \bronze\ Units to gain 1 \silver\ Unit you~defeated.
-  \item At the start of the next turn, a defeated main Hero may gain +2 \svg{movement}, Empower any Statistic Card from their M\&M Deck, \textit{and} Search (2) the \silver\ Neutral Deck.
+  \item At the start of the next turn, a defeated main Hero may gain +2 \svg{movement}, Empower any Statistic Card from their M\&M Deck, and Search (2) the \silver\ Neutral Deck.
 \end{itemize}
 
 \begin{center}
