--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -1,4 +1,4 @@
-0% !TeX spellcheck = en_US
+% !TeX spellcheck = en_US
 \addscenariosection{1}{Clash Scenario}{Dragon Valley}{\images/dragon.png}
 
 \begin{multicols*}{2}
