income every round

--- a/draft-scenarios/clash/trial_by_combat.tex
+++ b/draft-scenarios/clash/trial_by_combat.tex
@@ -67,6 +67,7 @@ When any player first flags ``The Hill'', each player, including the one who fla
 
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
+  \item All players gain income every Round.  
   \item The blocked Field on the Center Map Tile is a Magic Spring and does not count as blocked.
   \item All Fields on the Center Map Tile are visitable once per Faction.
   \item Players do not lose \svg{gold} for losing or retreating from any Combat.
