removed sanctuary, changed obelisk

--- a/draft-scenarios/clash/trial_by_combat.tex
+++ b/draft-scenarios/clash/trial_by_combat.tex
@@ -36,7 +36,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 \begin{itemize}
   \item P × Starting (I) Map Tile
   \item 2P × Far (II-III) Map Tiles
-  \item 2P × Near (IV-V) Map Tiles
+  \item 2P × Near (IV-V) Map Tiles (one with Obelisk, adjacent to Center Map Tile)
   \item 1 × Center Map Tile. The center Field is ``The Hill''
 \end{itemize}  
 
@@ -72,8 +72,7 @@ When any player first flags ``The Hill'', each player, including the one who fla
   \item All Fields on the Center Map Tile are visitable once per Faction.
   \item Players do not lose \svg{gold} for losing or retreating from any Combat.
   \item After winning a combat against another player’s Main Hero, you may recruit or reinforce one of your Units that was defeated (reduced to 0 hitpoints) during the battle, at no cost.
-  \item \textbf{Sanctuary:} Empower a Knowledge Statistic Card \textit{or} gain \svg{morale_positive}. \textit{Visitable once per Faction.}
-  \item \textbf{Obelisk:} Draw 1 Card. \textit{Visitable once per Faction.}
+  \item \textbf{Obelisk:} You may spawn your defeated Main Hero on an Obelisk you have flagged. \textit{Flaggable for all players.}
   \item \textit{Optional:} At the beginning of each Round, roll two Attack Dice separately and apply the effect from the table below.
 \end{itemize}
 
@@ -106,8 +105,8 @@ When any player first flags ``The Hill'', each player, including the one who fla
   \end{tabularx}
 }
 \begin{itemize}
-  \item After winning a Neutral Combat, you may sacrifice 2 \bronze\ Units to gain 1 \silver\ Unit you~defeated.
-  \item At the start of the next turn, a defeated main Hero may gain +2 \svg{movement}, Empower any Statistic Card from their M\&M Deck, and Search (2) the \silver\ Neutral Deck.
+  \item After winning a Neutral Combat, you may sacrifice 2 \bronze\ Units to gain 1 \silver\ Unit you defeated.
+  \item At the start of the next turn, a defeated main Hero may Empower any Statistic Card from their M\&M Deck, and Search (2) the \silver\ Neutral Deck.
 \end{itemize}
 
 \begin{center}
