po4a formatting (old)

--- a/translations/sentinels.tex/cs.po
+++ b/translations/sentinels.tex/cs.po
@@ -506,6 +506,7 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:121
+#, no-wrap
 msgid ""
 "  \\item Enemy armies have 3 MPs per Round.\n"
 "  \\item Enemy armies move at the end of every Turn, starting with the Turn they spawned.\n"
@@ -657,23 +658,23 @@ msgstr ""
 "{\\origbronze[12]} \\renewcommand{\\silver}{\\origsilver[12]} "
 "\\renewcommand{\\golden}{\\origgolden[12]} \\renewcommand{\\azure}"
 "{\\origazure[12]} \\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}XXXX} "
-"& \\darkcell{Kola 6 + 7} & \\darkcell{Kola 8 + 9} & \\darkcell{Kolo 10}\\\\ \\darkcell[1.4]"
-"{Lehká} & \\lightcell[1.4]{\\bronze \\silver \\silver \\silver \\golden} & "
-"\\lightcell[1.4]{\\silver \\silver \\silver \\golden \\golden} & "
-"\\lightcell[1.4]{\\silver \\silver \\golden \\azure \\footref{azure} "
-"\\linebreak (2\\bronze, 4\\silver, 3\\golden, 1\\azure)}\\\\ \\darkcell[1.4]"
-"{Normální} & \\lightcell[1.4]{\\silver \\silver \\silver \\golden \\golden} "
-"& \\lightcell[1.4]{\\silver \\silver \\silver \\golden \\azure} & "
-"\\lightcell[1.4]{\\golden \\golden \\golden \\azure \\footref{azure} "
-"\\linebreak (2\\silver, 7\\golden, 1\\azure)}\\\\ \\darkcell[1.4]{Težká} & "
-"\\lightcell[1.4]{\\silver \\silver \\golden \\golden \\golden} & "
-"\\lightcell[1.4]{\\silver \\silver \\golden \\golden \\azure} & "
-"\\lightcell[1.4]{\\golden \\golden \\azure \\azure \\footref{azure} "
-"\\linebreak (2\\silver, 6\\golden, 2\\azure)}\\\\ \\darkcell[1.4]{Nemožná} & "
-"\\lightcell[1.4]{\\silver \\golden \\golden \\golden \\golden} & "
-"\\lightcell[1.4]{\\golden \\golden \\golden \\golden \\azure} & "
-"\\lightcell[1.4]{\\golden \\azure \\azure \\azure \\footref{azure} "
-"\\linebreak (7\\golden, 3\\azure)}\\\\ \\end{tabularx} }"
+"& \\darkcell{Kola 6 + 7} & \\darkcell{Kola 8 + 9} & \\darkcell{Kolo 10}\\\\ "
+"\\darkcell[1.4]{Lehká} & \\lightcell[1.4]{\\bronze \\silver \\silver "
+"\\silver \\golden} & \\lightcell[1.4]{\\silver \\silver \\silver \\golden "
+"\\golden} & \\lightcell[1.4]{\\silver \\silver \\golden \\azure "
+"\\footref{azure} \\linebreak (2\\bronze, 4\\silver, 3\\golden, 1\\azure)}\\"
+"\\ \\darkcell[1.4]{Normální} & \\lightcell[1.4]{\\silver \\silver \\silver "
+"\\golden \\golden} & \\lightcell[1.4]{\\silver \\silver \\silver \\golden "
+"\\azure} & \\lightcell[1.4]{\\golden \\golden \\golden \\azure "
+"\\footref{azure} \\linebreak (2\\silver, 7\\golden, 1\\azure)}\\\\ "
+"\\darkcell[1.4]{Težká} & \\lightcell[1.4]{\\silver \\silver \\golden "
+"\\golden \\golden} & \\lightcell[1.4]{\\silver \\silver \\golden \\golden "
+"\\azure} & \\lightcell[1.4]{\\golden \\golden \\azure \\azure "
+"\\footref{azure} \\linebreak (2\\silver, 6\\golden, 2\\azure)}\\\\ "
+"\\darkcell[1.4]{Nemožná} & \\lightcell[1.4]{\\silver \\golden \\golden "
+"\\golden \\golden} & \\lightcell[1.4]{\\golden \\golden \\golden \\golden "
+"\\azure} & \\lightcell[1.4]{\\golden \\azure \\azure \\azure "
+"\\footref{azure} \\linebreak (7\\golden, 3\\azure)}\\\\ \\end{tabularx} }"
 
 #. type: Plain text
 #: coops/sentinels.tex:196
