Shorter paragraph is better paragraph.

--- a/translations/inferno_steadwicks_fall.tex/cs.po
+++ b/translations/inferno_steadwicks_fall.tex/cs.po
@@ -792,14 +792,14 @@ msgstr ""
 "      a Střílnou na jejich straně Desky Bojiště.\n"
 "    \\item Úroveň obtížnosti každého Souboje se do konce Scénáře zvýší o jednu Úroveň\n"
 "      (viz strana 35, \\uv{Tabulka Obtížnosti Pole} v Základních Pravidlech).\n"
-"    \\item Nepřátelští Napadající Hrdinové mají pouze 2 BP, místo 3. Ignorují vše ostatní\n"
+"    \\item Nepřátelští Hrdinové mají pouze 2 BP, místo 3. Ignorují vše ostatní\n"
 "      (včetně Dolů a Osad, pokud je to možné) a jdou přímo do hráčova Frakčního Města (na Dílku Mapy S6).\n"
 "      Nepokračují přímo za hráčem, ale pokud se náhodou nacházejí na stejném Dílku Mapy, zaútočí\n"
 "      na Hlavního Hrdinu hráče (ne Sekundárního).\n"
 "    \\item Hranice na Startovním Dílku Mapy Hrad S3 nelze překročit žádným způsobem, dokud\n"
 "      všechny Nepřátelské Osady (F3, F10, \\#F1) nebudou poraženy.\n"
-"    \\item Porážka Nepřátelských Útočících Hrdinů poskytuje 2 \\svg{valuables}.\n"
-"    \\item Obelisky vám dávají 1 \\svg{valuables} a fungují jako lokace \\uv{Hradní Brána} (pouze pokud máte \\uv{Hradní Bránu} postavenou ve svém Městě).\n"
+"    \\item Porážka Nepřátelských Hrdinů poskytuje 2 \\svg{valuables}.\n"
+"    \\item Obelisky vám dávají 1 \\svg{valuables} a fungují jako lokace \\uv{Hradní Brána} (pouze pokud ji máte postavenou ve svém Městě).\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -858,7 +858,7 @@ msgid ""
 "\n"
 msgstr ""
 "Právě jste obdrželi zprávu o postupu královny Catherine.\n"
-"Síly z Nighonu a Eeofolu se pokoušejí zdržet její pochod do Steadwicku, ale pochybují, že ji dokážou zdržet déle než dva nebo tři měsíce.\n"
+"Síly z Nighonu a Eeofolu se pokoušejí zdržet její postup, ale pochybují, že ji dokážou zdržet déle než dva nebo tři měsíce.\n"
 "\n"
 
 #. type: multicols*
@@ -984,7 +984,7 @@ msgid ""
 "\\textcolor{darkcandyapplered}{If Steadwick has not been captured, the Scenario is lost!}\n"
 "\n"
 msgstr ""
-"\\textcolor{darkcandyapplered}{Pokud nebyl Steadwick dobyt, prohrál jste Scénář!}\n"
+"\\textcolor{darkcandyapplered}{Pokud nebyl Steadwick dobyt, prohráli jste Scénář!}\n"
 "\n"
 
 #. type: tikzpicture
